# Ebay-Scraper

./: .gitignore  README.md  constants.py  items.toml  location_ids.json  pyproject.toml  requirements.txt  scrape.py  training_samples.json
ebayscraper/src/: classes.py  configurations.py  constants.py  core.py  scrape_async.py
ebayscraper/src/utilities/: postgres_utils.py  telegram_command_utils.py  utils.py
ebayscraper/src/utils/: machine_learning.py  postgres_utils.py  telegram_command_utils.py  utils.py
src/: classes.py  configurations.py  core.py  postgres_utils.py  scrape.py  scrape_async.py  telegram_command_utils.py  utils.py
